# firebase-admin

./: pyproject.toml  requirements.txt
